Refresh buffer access URLs (#224)
